--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,11 @@
 body {
     padding-top: 5rem;
 }
+
+.para{
+    font-size: x-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 50px 0px;
+
+    
+}
